fix spacing in permissions. deleted editGrant.styl

--- a/web/stylus/common/permission.styl
+++ b/web/stylus/common/permission.styl
@@ -15,6 +15,7 @@
 
 .permission-auth-email
   color pale
+  margin-left f4
 
 .permission-auth-heading
   font-weight bold
@@ -33,3 +34,10 @@
   display inline
   vertical-align top
   font-size 0.8em
+
+.permission-heading
+  margin-bottom 10px
+  .remove
+    margin 3px 3px 0 0
+
+
